adds apuration rate

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +8,13 @@
   <link rel="stylesheet" href="./css/style.css">
   <title>Acompanhamento eleições 2022</title>
 </head>
+
 <body>
-  <h1>Os votos atualizam automaticamente a cada 10 segundos</h1>
+  <h1>Os votos atualizam automaticamente</h1>
+  <p id="apuradas"></p>
+  <progress id="total" max="100"></progress>
   <main></main>
   <script type="module" src="./js/index.js"></script>
 </body>
+
 </html>
