adds result interface

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <h1>Os votos atualizam automaticamente</h1>
     <p id="apuradas"></p>
     <progress id="total" max="100"></progress>
+    <p id="result"></p>
   </header>
   <main></main>
   <aside class="github-corner">
